--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>
-		Josshua Owens
+		Joshua Owens
 	</title>
 </head>
 <body style="text-align: center;">
-	Hello World!
+	<h1>
+		Hello World!
+	</h1>
 </body>
 </html>
