through webgl this time

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </head>
   <body>
     <div class="webgl-content">
-      <div id="gameContainer" style="height: 100%"></div>
+      <div id="gameContainer" style="height: 900px"></div>
       <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Josh</div>
+        <script>
+          gameInstance.SetFullscreen(1);
+        </script>
       </div>
     </div>
   </body>
