--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
   <body>
     <div class="webgl-content">
       <div id="gameContainer" style="height: 900px"></div>
-      <div class="footer">
-        <script>
-          gameInstance.SetFullscreen(1);
-        </script>
+      <div class="footer" onload="gameInstance.SetFullscreen(1)">
       </div>
     </div>
   </body>
