--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Josh</title>
+    <title>Joshua Owens</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
     <script src="Build/UnityLoader.js"></script>
     <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Builds.json", {onProgress: UnityProgress});
+      gameInstance.SetFullscreen(1);
     </script>
   </head>
   <body>
     <div class="webgl-content">
-      <div id="gameContainer" style="height: 900px"></div>
-      <div class="footer" onload="gameInstance.SetFullscreen(1)">
-      </div>
+      <div id="gameContainer" style="height: 90%; width: 90%"></div>
     </div>
   </body>
 </html>
