--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <script src="Build/UnityLoader.js"></script>
     <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Builds.json", {onProgress: UnityProgress});
-      gameInstance.SetFullscreen(1);
     </script>
   </head>
   <body>
-    <div class="webgl-content">
-      <div id="gameContainer" style="height: 90%; width: 90%"></div>
+    <div id="webgl-content" style="width: 100%; height: 100%>
+     <div id="gameContainer" style="width: 100%; height: 100%"></div>
     </div>
   </body>
 </html>
