--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </script>
   </head>
   <body>
-    <div id="webgl-content" style="width: 100%; height: 100%>
-     <div id="gameContainer" style="width: 100%; height: 100%"></div>
+    <div class="webgl-content">
+      <div id="gameContainer"></div>
     </div>
   </body>
 </html>
