--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <style type="text/css" media=screen>
+      body {
+        margin: 0px;
+        padding: 0px;
+      }
+    </style>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Joshua Owens</title>
@@ -13,8 +19,8 @@
     </script>
   </head>
   <body>
-    <div class="webgl-content">
-      <div id="gameContainer" style="width: 100%; height: 100%; position: absolute;"></div>
+    <div class="webgl-content" style="width: 100%; height: 100%; position: absolute">
+      <div id="gameContainer"></div>
     </div>
   </body>
 </html>
