--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </script>
   </head>
   <body>
-    <div class="webgl-content" style="height: 100%; position: absolute">
+    <div class="webgl-content" style="width: 100%; height: 100%; position: absolute">
       <div id="gameContainer"></div>
     </div>
   </body>
