--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Joshua Owens</title>
+    <title>%UNITY_WIDTH% %UNITY_HEIGHT%</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
