--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>%UNITY_WIDTH% %UNITY_HEIGHT%</title>
+    <title>Joshua Owens</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="webgl-content" style="width: 100%; height: 100%; position: absolute; ">
-      <div id="gameContainer"></div>
+      <div id="gameContainer" style="width: 100%; height: 100%"></div>
     </div>
   </body>
 </html>
