--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="webgl-content" style="width: 100%; height: 100%; position: absolute; ">
-      <div id="gameContainer" style="width: 100%; height: 100%"></div>
+      <div id="gameContainer" style="width: 100%; height: 100%; margin: 0px;"></div>
     </div>
   </body>
 </html>
