--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'>
     </script>
 
-    <script src="%UNITY_WEBGL_LOADER_URL%"></script>
+    <script src="Template/UnityProgress.js"></script>
     <script>
       function UnityProgress(gameInstance, progress) {
         var container = document.getElementById('gameContainer');
