--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <style type="text/css" media=screen>
-      body {
-        margin: 0px;
-        padding: 0px;
-      }
-    </style>
+
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Joshua Owens</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <script src="TemplateData/UnityProgress.js"></script>  
-    <script src="Build/UnityLoader.js"></script>
     <style>
       * {
         margin: 0;
@@ -22,6 +14,14 @@
 
       #gameContainer canvas {
         display:block;
+      }
+
+      div#webgl-content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
       }
 
       div#loadingBox {
@@ -126,7 +126,8 @@
         }
       }
     </style>
-
+    <script src="TemplateData/UnityProgress.js"></script>  
+    <script src="Build/UnityLoader.js"></script>
     <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'>
     </script>
 
@@ -157,18 +158,23 @@
           document.getElementById("progressBar").style.display = "inherit";
         }
       }
-            var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Builds.json", {
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Build Temp.json", {
         onProgress: UnityProgress,
         Module: {
           onRuntimeInitialized: function() { UnityProgress(gameInstance, "complete") }
         }
       });
     </script>
-
   </head>
   <body>
     <div class="webgl-content" style="width: 100%; height: 100%; position: absolute; ">
       <div id="gameContainer" style="width: 100%; height: 100%; margin: 0px;"></div>
+    </div>
+    <div id="box"></div>
+    <div id="loadingBox">
+      <div id="spinner"></div>
+      <div id="bgBar"></div>
+      <div id="progressBar"></div>
     </div>
   </body>
 </html>
