--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'>
     </script>
 
-    <script src="Template/UnityProgress.js"></script>
+    <script src="TemplateData/UnityProgress.js"></script>
     <script>
       function UnityProgress(gameInstance, progress) {
         var container = document.getElementById('gameContainer');
