--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
     <div class="webgl-content" style="width: 100%; height: 100%; position: absolute; ">
       <div id="gameContainer" style="width: 100%; height: 100%; margin: 0px;"></div>
     </div>
-
+    <a target="_blank" href="http://www.kongregate.com"> <div id="icon"></div> </a>
+    <p id="loadingInfo"></p>
   </body>
 </html>
