--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         left: 50%;
         margin-top: -185px;
         margin-left: -150px;
-        background-image: url("Template/loading.png");
+        background-image: url("Template/Loading.mp4");
         background-repeat: no-repeat;
         box-shadow: 1px 1px 5px #141414;
       }
