--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
         left: 50%;
         margin-top: -185px;
         margin-left: -150px;
-        background-image: url("Template/Loading.mp4");
-        background-repeat: no-repeat;
         box-shadow: 1px 1px 5px #141414;
       }
 
@@ -174,7 +172,13 @@
     <div class="webgl-content" style="width: 100%; height: 100%; position: absolute; ">
       <div id="gameContainer" style="width: 100%; height: 100%; margin: 0px;"></div>
     </div>
-    <a target="_blank" href="http://www.kongregate.com"> <div id="icon"></div> </a>
+    <a target="_blank" href="http://www.kongregate.com">
+     <div id="icon">
+        <video width="300" height="310" autoplay loop>
+          <source src="Template/Loading.mp4" type="video/mp4">
+        </video>    
+     </div> 
+   </a>
     <p id="loadingInfo"></p>
   </body>
 </html>
